--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Creating and Inserting DOM Elements</title>
-  </head>
-  <script type="application/javascript">
-  </script>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM Manipulation Example</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <main id="main"></main>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
+    <script src="index.js"></script>
+</body>
 </html>
